# calendar-scraper

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEVELOPMENT_GUIDELINES.md  DOCKER_TEMPLATE.md  Dockerfile  POSTMAN_GUIDE.md  PROJECT_TEMPLATE.md  README.md  calendars.toml.example  claude.md  docker-compose.yml  postman_collection.json
.github/workflows/: README.md  ci.yml
src/: main.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/config/: mod.rs
src/filters/: day.rs  mod.rs  week.rs
src/ics/: mod.rs  parser.rs
src/models/: event.rs  mod.rs  response.rs
