[package]
name = "calendar-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.9"
actix-rt = "2.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["blocking"] }

# ICS parser
icalendar = "0.16"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
# Testing utilities
mockito = "1.5"
