[package]
name = "calendar-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.9"
actix-rt = "2.10"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# HTTP client
reqwest = { version = "0.12", features = ["blocking"] }

# ICS parser
icalendar = "0.16"
rrule = "0.13"
regex = "1.10"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Config file parsing
toml = "0.8"

# Environment variables
dotenv = "0.15"

[dev-dependencies]
# Testing utilities
mockito = "1.5"
tempfile = "3.8"
